--- a/result.html
+++ b/result.html
@@ -2,11 +2,20 @@
 
 {% block content %}
 <h2>Résultat</h2>
-<div id="result">
-    $$ {{ result|safe }} $$
+<div>
+    <script type="text/x-mathjax-config">
+      MathJax.Hub.Config({
+        tex2jax: {inlineMath: [['$', '$'], ['\\(', '\\)']]}
+      });
+    </script>
+    <script type="text/javascript" async
+      src="https://cdn.jsdelivr.net/npm/mathjax@2.7.7/MathJax.js?config=TeX-MML-AM_CHTML">
+    </script>
+    <p>$${{ result|safe }}$$</p>
 </div>
 <a href="/">Retour</a>
 {% endblock %}
+
 
 
 
